--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <!-- /SOCIAL ICONS -->
                     
 
-                    <p class="scroll-animated-from-right">© 2020 Arran Smedley | Design by <a href="https://github.com/ArranSmedley">Template Foundation</a></p>
+                    <p class="scroll-animated-from-right">© 2020 Arran Smedley </a></p>
 
 
                 </section>
