--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                
                                 The following image works as a link to my Github:<br>
 								<a href="https://github.com/ArranSmedley">
-                                <img class="img-responsive" src="assets/img/work/Capture.png" alt="image">
+                                <img class="img-responsive" src="assets/img/work/maxresdefault.jpg" alt="image">
                                 </a>
 								
                                 <h3>Github</h3>
