--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             </div><!--//item-->
                             
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://www.youtube.com/watch?v=NELlMk2CToE" target="_blank">
+                                <a class="col-md-4 col-12" href="https://github.com/ArranSmedley/Global-Game-Jam-2018-Game" target="_blank">
                                 <img class="img-fluid project-image rounded shadow-sm" src="/ArranSmedley.github.io/tree/master/assets/images/projects/project_4.png" alt="Graphics" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
