--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="ArranSmedleyWork@gmail.com" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary float-right" href="https://www.linkedin.com/in/arran-smedley/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
         </div><!--//container-->
     </header><!--//header-->
     
