--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Edinburgh, Scotland</li>
                                 <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">ArranSmedleyWork@gmail.com</a></li>
-                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://www.website.com</a></li>
+                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://arransmedley.github.io/</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
