--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fas fa-graduation-cap"></i> HnC Games Development</h3>
-                                <h4 class="university">University of Bristol <span class="year">(2017-2018)</span></h4>
+                                <h4 class="university">Edinburgh College <span class="year">(2017-2018)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
