--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <img class="img-fluid project-image rounded shadow-sm" src="assets/images/projects/project5.jpg" alt="Disjkstra's Pathfinding Algorithm" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
-                                    <h3 class="title"><a href="https://github.com/ArranSmedley/Dijkstras-algorithm-" target="_blank">Disjkstra's Pathfinding Algorithm</a></h3>
+                                    <h3 class="title"><a href="https://github.com/ArranSmedley/Dijkstras-algorithm-" target="_blank">Dijkstra's Pathfinding Algorithm</a></h3>
                                     <p class="mb-2">This project was developed using visual studio 2019 within C#. The task for the project was to create a pathfinding algorithm that finds the shortest cave route in the least time. To get this project to run just simply download and go into the command line where the caveroute.bat file is located, type in "Caveroute Caveroute1" or "Caveroute Caveroute2" and it will find the fastest caveroute to travel through. Generating a .csn file within the same directory as the program.</p>
                                     <p><a class="more-link" href="https://github.com/ArranSmedley/Dijkstras-algorithm-" target="_blank"><i class="fas fa-external-link-alt"></i>Find out more</a></p>
                                 </div><!--//desc-->                          
@@ -304,12 +304,7 @@
     </div><!--//masonry-->
     
     <!-- ******FOOTER****** --> 
-    <footer class="footer">
-        <div class="container text-center">
-                <!--/* This template is free as long as you keep the attribution link below. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fas fa-heart"></i> by <a href="https://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
-        </div><!--//container-->
-    </footer><!--//footer-->
+   
  
     <!-- Javascript -->          
     <script type="text/javascript" src="assets/plugins/jquery-3.4.1.min.js"></script>
