--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <p>I am an energetic, ambitious individual who - through past experiences applies the same
 								level of dedication to all aspects of my life.
 								
-								Currently projected a second-class honours degree from Napier University in Games
+								Recieved a second-class honours degree from Napier University in Games
 								Development. During my time at University and work experiences I have been involved in
 								an array of projects which I have illustrated on my website portfolio that I have provided a
 								link to on the right.
@@ -176,6 +176,10 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
+							<div class="item">
+                                <h3 class="title">Current job: Software Tester - <span class="place"><a href="#">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <p>Currently a software tester for the shopworks, working within the testim platform</p>
+                            </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="#">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
                                 <p>As a Software Engineer Intern at Calnex Solutions I got hands on experience in editing programming code via updating the Delphi IDE within the company. In conjunction with this, I was given practical python scripting experience measuring network performance for a client of Calnex. Furthermore, I provided ABB testing for certain components within the Calnex solutions software. Each task required high levels of team communication within a scrum and cohesion with the scrum manager to ensure that whomever requested the task be done, whether that be a client or Calnex management were more than satisfied with the job done.</p>
