--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="content">
 							<div class="item">
                                 <h3 class="title">Current job: Software Tester - <span class="place"><a href="#">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
-                                <p>Currently a software tester for the shopworks, working within the testim platform</p>
+                                <p>Currently a software tester for the shopworks, working within the testim platform.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="#">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
@@ -249,6 +249,8 @@
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
                                 
+								<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="arran-smedley" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://uk.linkedin.com/in/arran-smedley?trk=profile-badge">Arran Smedley</a></div>
+              
 
                             </div>              
                         </div><!--//content-->  
