--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
-    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="assets/fontawesome/js/all.js"></script>
 </head> 
 
 <body>
