--- a/index.html
+++ b/index.html
@@ -158,15 +158,17 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
+							<div class="item">
+                                <h3 class="title"><a href="\assets\dissertation" download="40406581_Arran_Smedley.pdf">Dissertation</a> 
+                                <p class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES by Arran Smedley (40406581) Dissertation submitted in partial fulfillment of the degree of BSc (Hons) Games Development Edinburgh Napier University, Word Count: 14,194, Grade: 2:1.</p>
+                            </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
                                 <p class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
-
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
                                 <p class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
-                            
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
