--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
                                 <p class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
+							</div><!--//item-->
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
                 </section><!--//section-->
