--- a/index.html
+++ b/index.html
@@ -159,8 +159,13 @@
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
 							<div class="item">
-                                <h3 class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Dissertation</a> 
-                                <p class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES by Arran Smedley (40406581) Dissertation submitted in partial fulfillment of the degree of BSc (Hons) Games Development Edinburgh Napier University, Word Count: 14,194, Grade: 2:1.</p>
+                                <h3 class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download my Dissertation</a> 
+                                <p class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
+												   by Arran Smedley (40406581)<br>
+												   Dissertation submitted in partial fulfillment of the degree of<br>
+												   BSc (Hons) Games Development Edinburgh Napier University<br>
+												   Word Count: 14,194<br>
+												   Grade: 2:1</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
