--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
 							<div class="item">
-                                <h3 style="color: green; class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download my Dissertation</a> 
-                                <p class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
+                                <h3 style="color: blue; font-size:8px; class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download my Dissertation</a> 
+                                <p style="color: black; font-size:6px; class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
 												   by Arran Smedley (40406581)<br>
 												   Dissertation submitted in partial fulfillment of the degree of<br>
 												   BSc (Hons) Games Development Edinburgh Napier University<br>
