--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         <h2 class="heading">Other Projects</h2>
                         <div class="content">
 							<div class="item">
-                                <h3 style="color: blue; font-size:8px; class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download my Dissertation</a> 
-                                <p style="color: black; font-size:6px; class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
+                                <h3 style="color: blue; font-size:16px; class="title"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download my Dissertation</a> 
+                                <p style="color: black; font-size:12px; class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
 												   by Arran Smedley (40406581)<br>
 												   Dissertation submitted in partial fulfillment of the degree of<br>
 												   BSc (Hons) Games Development Edinburgh Napier University<br>
@@ -168,12 +168,12 @@
 												   Grade: 2:1</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
-                                <p class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
+                                <h3 "color: blue; font-size:16px; class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
+                                <p "color: blue; font-size:16px; class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
-                                <p class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
+                                <h3 "color: blue; font-size:16px; class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
+                                <p "color: blue; font-size:16px; class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
 							</div><!--//item-->
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
