--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 												   Grade: 2:1</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 "color: blue; font-size:16px; class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
-                                <p "color: blue; font-size:16px; class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
+                                <h3 style="color: blue; font-size:16px; class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
+                                <p style="color: blue; font-size:16px; class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 "color: blue; font-size:16px; class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
-                                <p "color: blue; font-size:16px; class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
+                                <h3 style="color: blue; font-size:16px; class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
+                                <p style="color: blue; font-size:16px; class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
 							</div><!--//item-->
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
