--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
 							<div class="item">
-                                <h3 class="title">Current job: Software Tester - <span class="place"><a href="#">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <h3 class="title">Current job: Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
                                 <p>Currently a software tester for the shopworks, working within the testim platform.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer Intern - <span class="place"><a href="#">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
+                                <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.calnexsol.com/en/">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
                                 <p>As a Software Engineer Intern at Calnex Solutions I got hands on experience in editing programming code via updating the Delphi IDE within the company. In conjunction with this, I was given practical python scripting experience measuring network performance for a client of Calnex. Furthermore, I provided ABB testing for certain components within the Calnex solutions software. Each task required high levels of team communication within a scrum and cohesion with the scrum manager to ensure that whomever requested the task be done, whether that be a client or Calnex management were more than satisfied with the job done.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer Intern - <span class="place"><a href="#">Viavi Solutions</a></span> <span class="year">(June 2019 - September 2019)</span></h3>
+                                <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.viavisolutions.com/en-us">Viavi Solutions</a></span> <span class="year">(June 2019 - September 2019)</span></h3>
                                 <p>As a Software Engineering Intern at Viavi Solutions, my main task was taking on a project which anonymised and encrypted geo-locational data to ensure the protection of client data and personal information. My other day-to-day requirements consisted of tasks such as: Fixing bugs and writing scripts in C#, Handling highly stressed situations / unexpected errors in an eficient manner, Assisting in the commercialization of service and project management software, Backlog negotiation and project estimations, Coding, testing and fixing programming errors, Communication with clients and representing Viavi in a professional mannerism, Working in conjunction with a core team and a scrum master.</p>
                             </div><!--//item-->
                            
