--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>A Software Tester with a focus on test automation, regression testing and working within an agile environment. I look to transcend my hard work ethic to bringing success to not only myself but to those around me in a field which I hope to make my mark.
-							   Coming from a games development background with a wide range of knowledge on programming languages such as C#, C++ and Python, which is shown below through my various different projects completed through University and in spare time.</p>
+                            <p>A Software Tester with a focus on test automation, regression testing and working within an agile environment. I look to transcend my hard work ethic to bringing success to not only myself but to those around me in a field which I hope to make my mark.<br><br>
+							   Coming from a games development background with a wide range of knowledge on programming languages such as C#, C++ and Python, which is shown below through my various different projects completed through university and in spare time.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
