--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container clearfix">                       
-            <img class="profile-image img-fluid float-left rounded-circle" src="assets/images/background.png" alt="profile image" />
+            <img class="profile-image img-fluid float-left rounded-circle" src="assets/images/1650456875783.jpg" alt="profile image" />
             <div class="profile-content float-left">
                 <h1 class="name">Arran Smedley</h1>
                 <h2 class="desc">Software/Games Developer</h2>   
