--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="content">
 							<div class="item">
                                 <h3 class="title">Dissertation - <span class="place"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download</a></span></h3>
-                                <p class="summary">THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
+                                <p>THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
 												   by Arran Smedley (40406581)<br>
 												   Dissertation submitted in partial fulfillment of the degree of<br>
 												   BSc (Hons) Games Development Edinburgh Napier University<br>
