--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                         <div class="content">
 							<div class="item">
                                 <h3 class="title">Dissertation - <span class="place"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download</a></span></h3>
-                                <p>THE DEVELOPMENT OF PROCEDURAL MAP GENERATION WITHIN GAMES<br>
-												   by Arran Smedley (40406581)<br>
-												   Dissertation submitted in partial fulfillment of the degree of<br>
-												   BSc (Hons) Games Development Edinburgh Napier University<br>
-												   Word Count: 14,194<br>
-												   Grade: 2:1</p>
+                                <p>The aim of this project is to produce and compare three procedural map generation 
+								   algorithms for a two-dimensional dungeon roguelike game. In turn, deriving 
+								   assumptions from these algorithms which in turn can be used to produce detailed 
+								   comparisons of performance.
+								   The outcome was a successful prototype that had three different map generation 
+								   algorithms consisting of Cellular Automata, Perlin Noise and Delaunay Triangulation with the paper being graded a 2:1.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 style="color: blue; font-size:16px; class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
