--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <div class="content">
 							<div class="item">
                                 <h3 class="title">Dissertation - <span class="place"><a href="\assets\dissertation\40406581_Arran_Smedley.pdf" download="Dissertation">Click here to download</a></span></h3>
-                                <p>The aim of this project is to produce and compare three procedural map generation 
+                                <p>The aim of this project was to produce and compare three procedural map generation 
 								   algorithms for a two-dimensional dungeon roguelike game. In turn, deriving 
 								   assumptions from these algorithms which in turn can be used to produce detailed 
 								   comparisons of performance.
@@ -159,12 +159,12 @@
 								   algorithms consisting of Cellular Automata, Perlin Noise and Delaunay Triangulation with the paper being graded a 2:1.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 style="color: blue; font-size:16px; class="title"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Github</a> 
-                                <p style="color: black; font-size:16px; class="summary">At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
+                                <h3 class="title">Github - <span class="place"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Click here</a></span></h3>
+                                <p>At my github all my other project can be seen. Most projects have been completed throughout univeristy and college but some are personal project in which I am still working on.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 style="color: blue; font-size:16px; class="title"><a href="https://arran-d-smedley.itch.io/" target="_blank">Itch.io</a> 
-                                <p style="color: black; font-size:16px; class="summary">My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
+                                <h3 class="title">Itch.io - <span class="place"><a href="https://arran-d-smedley.itch.io/" target="_blank">Click here</a></span></h3>
+                                <p>My itch.io holds for the most part, my completed games in which more will be produced in the coming months. </p>
 							</div><!--//item-->
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
