--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><strong>French:</strong></span>
-                                    <span class="level">Elementary. National 5(C) <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star-half"></i></span>
+                                    <span class="level">Elementary. National 5(C) <br class="visible-sm visible-xs"/><i class="fas fa-star"></i> <i class="fas fa-star"></i><i class="fas fa-star-half"></i></span>
                                 </li><!--//item-->
                             </ul>
                         </div><!--//content-->
