--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="item">
-                                    <h3 class="level-title">Python <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Python has been my main programming language for the past few years on testing and data analysis tasks within the work environment"><i class="fas fa-info-circle"></i>Expert</span></h3>
+                                    <h3 class="level-title">Python <span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Python has been my main programming language for the past few years on testing and data analysis tasks within the work environment mainly using the library Pandas"><i class="fas fa-info-circle"></i>Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="80%">
                                         </div>                                      
@@ -242,7 +242,15 @@
                                 <div class="item">
                                     <h3 class="level-title">C<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="I have developed a few small game applications in C such as snake and knots & crosses so have a base understanding"><i class="fas fa-info-circle"></i>Pro</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="53%">
+                                        <div class="level-bar-inner" data-level="50%">
+                                        </div>                                      
+                                    </div><!--//level-bar-->                                 
+                                </div><!--//item-->
+								
+                                <div class="item">
+                                    <h3 class="level-title">SQL<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="After picking up a data analyst role in shopworks I gained a greater understanding in SQL specifically using SQL Workbench or Athena AWS"><i class="fas fa-info-circle"></i>Pro</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="60%">
                                         </div>                                      
                                     </div><!--//level-bar-->                                 
                                 </div><!--//item-->
