--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								   assumptions from these algorithms which in turn can be used to produce detailed 
 								   comparisons of performance.
 								   The outcome was a successful prototype that had three different map generation 
-								   algorithms consisting of Cellular Automata, Perlin Noise and Delaunay Triangulation with the paper being graded a 2:1.</p>
+								   algorithms consisting of Cellular Automata, Perlin Noise and Delaunay Triangulation with the <strong>paper being graded a 2:1.</strong></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Github - <span class="place"><a href="https://github.com/ArranSmedley?tab=repositories" target="_blank">Click here</a></span></h3>
