--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <div class="content">
 							<div class="item">
                                 <h3 class="title">Current job: Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
-                                <p>Currently a software tester for the shopworks, working within the testim platform.</p>
+                                <p>Currently I maintain and create new tests for the test automation tool that we use, I have also expanded my role by joining the python team in which I am involved with a lot of data analysis in SQL (Athena) and Python using the Pandas library for data manipulation.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.calnexsol.com/en/">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
