General Website Update

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container clearfix">                       
-            <img class="profile-image img-fluid float-left rounded-circle" src="assets/images/1650456875783.jpg" alt="profile image" />
+            <img class="profile-image img-fluid float-left rounded-circle" src="assets/images/Profile.jpg" alt="profile image" />
             <div class="profile-content float-left">
                 <h1 class="name">Arran Smedley</h1>
-                <h2 class="desc">Software/Games Developer</h2>   
+                <h2 class="desc">Game Developer</h2>   
                 <ul class="social list-inline">
                     <li class="list-inline-item"><a href="https://twitter.com/Azzamond"><i class="fab fa-twitter"></i></a></li>
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/arran-smedley/"><i class="fab fa-linkedin-in"></i></a></li>
@@ -55,8 +55,7 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>A Software Tester with a focus on test automation, regression testing and working within an agile environment. I look to transcend my hard work ethic to bringing success to not only myself but to those around me in a field which I hope to make my mark.<br><br>
-							   Coming from a games development background with a wide range of knowledge on programming languages such as C#, C++ and Python, which is shown below through my various different projects completed through university and in spare time.</p>
+                            <p>Currently I am an Associate Technical Designer at Build a Rocket Boy working on the title Everywhere.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -174,9 +173,13 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
+                            <div class="item">
+                                <h3 class="title">Associate Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <p>Currently I am working on Everywhere</p>
+                            </div><!--//item-->
 							<div class="item">
-                                <h3 class="title">Current job: Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
-                                <p>Currently I maintain and create new tests for the test automation tool that we use, I have also expanded my role by joining the python team in which I am involved with a lot of data analysis in SQL (Athena) and Python using the Pandas library for data manipulation.</p>
+                                <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <p>At The Shopworks, I maintained the automation and QA of the applications. Previously I constructed and organised all the automation testing. Covering all aspects of the applications, these automation tests were created using Testim an automation tool that uses test grids and NodeJS to construct different test cases. </p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer Intern - <span class="place"><a href="https://www.calnexsol.com/en/">Calnex Solutions</a></span> <span class="year">(June 2020 - September 2020)</span></h3>
