Small Grammar Update

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Associate Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(May 2021 - Current)</span></h3>
-                                <p>Currently I am working on Everywhere</p>
+                                <p>Currently I am working on the title Everywhere.</p>
                             </div><!--//item-->
 							<div class="item">
                                 <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
