--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Associate Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <h3 class="title">Associate Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(December 2022 - Current)</span></h3>
                                 <p>Currently I am working on the title Everywhere.</p>
                             </div><!--//item-->
 							<div class="item">
-                                <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - Current)</span></h3>
+                                <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - December 2022)</span></h3>
                                 <p>At The Shopworks, I maintained the automation and QA of the applications. Previously I constructed and organised all the automation testing. Covering all aspects of the applications, these automation tests were created using Testim an automation tool that uses test grids and NodeJS to construct different test cases. </p>
                             </div><!--//item-->
                             <div class="item">
