--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Currently I am an Associate Technical Designer at Build a Rocket Boy working on the title Everywhere.</p>
+                            <p>Technical Designer with experience in mission scripting, game systems, and automation testing. A
+                            self-motivated and detail-oriented designer with a strong foundation in programming and technical
+                            implementation. I've worked across multiple titles in the AAA games industry, bringing missions and systems
+                            to life using Lua scripting.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -174,8 +177,11 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Associate Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(December 2022 - Current)</span></h3>
-                                <p>Currently I am working on the title Everywhere.</p>
+                                <h3 class="title">Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(December 2022 - Current)</span></h3>
+                                <p>Initially joined as an Associate Technical Designer, promoted to Technical Designer in May 2023.<br>
+                                    - Worked on two large-scale projects: Everywhere and Mindseye.<br>
+                                    - Developed missions and systems using Lua scripting.<br>
+                                    - Collaborated with multi-disciplinary teams to enhance gameplay and systems.</p>
                             </div><!--//item-->
 							<div class="item">
                                 <h3 class="title">Software Tester - <span class="place"><a href="https://www.theshopworks.com/">The Shopworks</a></span> <span class="year">(May 2021 - December 2022)</span></h3>
