--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <p>Technical Designer with experience in mission scripting, game systems, and automation testing. A
                             self-motivated and detail-oriented designer with a strong foundation in programming and technical
                             implementation. I've worked across multiple AAA titles in the games industry, bringing missions and systems
-                            to life using Unreal Engine and Lua scripting.</p>
+                            to life using Unreal Engine and LUA scripting.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
@@ -180,7 +180,7 @@
                                 <h3 class="title">Technical Designer - <span class="place"><a href="https://www.buildarocketboy.com/">Build a Rocket Boy</a></span> <span class="year">(December 2022 - Current)</span></h3>
                                 <p>Initially joined as an Associate Technical Designer, promoted to Technical Designer in May 2023.<br>
                                     - Worked on two large-scale projects: Everywhere and Mindseye.<br>
-                                    - Developed missions and systems using Lua scripting.<br>
+                                    - Developed missions and systems using Unreal Engine and LUA scripting.<br>
                                     - Collaborated with multi-disciplinary teams to enhance gameplay and systems.</p>
                             </div><!--//item-->
 							<div class="item">
