--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
                             <div class="item featured text-center">
                                 
                                 <div class="featured-image has-ribbon">
-                                    <iframe width="420" height="315" src="https://youtu.be/4s3jVJaFrbM?si=J1xcE6Gy8dSLVS1w"> </iframe/>
+                                      <iframe width="420" height="315" 
+                                              src="https://www.youtube.com/embed/4s3jVJaFrbM" 
+                                              title="Mindseye" 
+                                              frameborder="0" 
+                                              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                              allowfullscreen>
+                                      </iframe>
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
